      \item Fit shifted log-normal models via
      family \code{shifted_lognormal}. (#218)
    }
  }
  \subsection{OTHER CHANGES}{
    \itemize{
      \item Change the parameterization of \code{weibull}
      models to be consistent with other model classes.
      Post-processing of \code{weibull} models fitted with 
      earlier version of \pkg{brms} is no longer possible.
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item Allow the \code{:} operator to combine 
      groups in multi-membership terms thanks to
      Gang Chen.
      \item Allow truncation in multivariate models.
    }
  }
}

\section{CHANGES IN VERSION 2.1.0}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item Fit models on multiple imputed 
      datasets via \code{brm_multiple} thanks 
      to Ruben Arslan. (#27)
      \item Combine multiple \code{brmsfit} objects 
      via function \code{combine_models}.
      \item Compute model averaged posterior 
      predictions with method \code{pp_average}. (#319)
      \item Add new argument \code{ordinal} to
      \code{marginal_effects} to generate special
      plots for ordinal models thanks to the idea 
      of the GitHub user silberzwiebel. (#190)
      \item Use informative inverse-gamma priors
      for length-scale parameters of Gaussian
      processes. (#275)
      \item Compute hypotheses for all levels of a 
      grouping factor at once using argument \code{scope} 
      in method \code{hypothesis}. (#327)
      \item Vectorize user-defined \pkg{Stan} functions
      exported via \code{export_functions} using
      argument \code{vectorize}.
      \item Allow predicting new data in models
      with ARMA autocorrelation structures.
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item Correctly recover noise-free coefficients
      through \code{me} terms thanks to Ruben Arslan.
      As a side effect, it is no longer possible to define
      priors on noise-free \code{Xme} variables directly, but 